Changed background and removed social medias

--- a/src/styles/variables/colors.sass
+++ b/src/styles/variables/colors.sass
@@ -1,6 +1,6 @@
-$light-bg-color: #f4f4f4
+$light-bg-color: #e6f0ff
 $dark-body-color: #111
 $base-body-color: #444
-$light-body-color: #777
+$light-body-color: #444
 $active-color: #9055a2
 $border-color: #ccc
